--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,7 +6,13 @@
 }
 
 body {
-  padding: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
