--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,22 @@
+.form {
+  margin: 2% auto 0 auto;
+  padding: 20px;
+  width: 400px;
+  min-height: 400px;
+  background-color: #fff;
+  opacity: 0.4;
+}
+
+.bg{
+background-image: linear-gradient(160deg, #02ccba 0, #aa7ecd 100%);
+transform-origin: left bottom;
+}
+
+.card {
+  border-radius: 4%;
+}
+
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
