--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="container center card form">
+<div class="container center card form z-depth-3">
 
   <form>
     <!--section for text inputs-->
@@ -10,15 +10,21 @@
         <label class="active" for={{jsonOutput.label}}>{{jsonOutput.label}}</label>
       </div>
 
-      <div ng-if="jsonOutput.component=='checkbox'" class="center inline">
-        <input type="checkbox" id="{{jsonOutput.label}}" />
-        <label for="{{jsonOutput.label}}">{{jsonOutput.label}}</label>
+      <div ng-if="jsonOutput.component=='checkbox'" class="align-left inline" ng-repeat="option in jsonOutput.options">
+        <input type="checkbox" id="{{jsonOutput.label+option}}" name="{{option}}" />
+        <label for="{{jsonOutput.label+option}}">{{option}}</label>
       </div>
 
-      <div ng-if="jsonOutput.component=='radio'" class="center inline" ng-repeat="option in jsonOutput.Options">
-        <input type="radio" id="{{jsonOutput.label}}" name="{{option}}" />
-        <label for="{{jsonOutput.label}}">{{jsonOutput.label}}</label>
+      <div ng-if="jsonOutput.component=='radio'" class="center inline" ng-repeat="option in jsonOutput.options">
+        <input type="radio" id="{{jsonOutput.label+'radio'+option}}" name="{{jsonOutput.label}}" />
+        <label for="{{jsonOutput.label+'radio'+option}}">{{option}}</label>
       </div>
+
+      <div>
+        <textarea value="{{jsonOutput.autofill}}" id="{{jsonOutput.label+'textarea'}}" class="materialize-textarea"></textarea>
+        <label for="{{jsonOutput.label+'textarea'}}">{{jsonOutput.label}}</label>
+      </div>
+
     </section>
 
 
